--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "echo 'Static site - no build needed'"
   },
   "dependencies": {
-    "groq-sdk": "^0.5.0"
+    "groq-sdk": "^0.5.0",
+    "node-fetch": "^2.7.0",
+    "resend": "^6.7.0"
   },
   "keywords": [
     "portfolio",
@@ -18,4 +20,3 @@
   "author": "Disha Sawant",
   "license": "MIT"
 }
-
