Optimize codebase: DRY utilities, conditional logging, cleaner code
- Created shared utils.js module (headers, rate limiting, email validation)
- Made debug logs conditional on DEBUG environment variable
- Refactored all functions to use shared utilities
- Reduced chat.js from 640 to 320 lines (50% smaller)
- Optimized avatar.js with consolidated state and DOM elements
- Removed duplicate code across send-email, send-document, schedule-meeting
- Improved maintainability and readability

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "ai"
   ],
   "author": "Disha Sawant",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "netlify-cli": "^23.13.3"
+  }
 }
