--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "echo 'Static site - no build needed'"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "groq-sdk": "^0.5.0",
     "node-fetch": "^2.7.0",
     "resend": "^6.7.0"
