--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,14 @@ node_modules/
 .env
 .env.local
 .env.*.local
+.dev.vars
 
 # Netlify
 .netlify/
+
+# Cloudflare
+.wrangler/
+.mf/
 
 # OS files
 .DS_Store
