--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,9 @@ node_modules/
 # Environment variables
 .env
 .env.local
-.env.*.local
-.dev.vars
 
-# Netlify
+# Build artifacts
 .netlify/
-
-# Cloudflare
-.wrangler/
-.mf/
 
 # OS files
 .DS_Store
@@ -28,4 +22,5 @@ Thumbs.db
 *.log
 npm-debug.log*
 
+# Data exports
 Basic_LinkedInDataExport_01-13-2026.zip/
